# ChangeLog for dev-perl/Archive-Tar
# Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.94 2008/09/20 12:15:31 coldwind Exp $

  20 Sep 2008; Santiago M. Mola <coldwind@gentoo.org>
  Archive-Tar-1.38.ebuild:
  amd64 stable

  15 Sep 2008; Torsten Veller <tove@gentoo.org> -Archive-Tar-1.28.ebuild,
  -Archive-Tar-1.29.ebuild, -Archive-Tar-1.30.ebuild,
  -Archive-Tar-1.31.ebuild:
  Cleanup

  11 Jul 2008; Jeroen Roovers <jer@gentoo.org> Archive-Tar-1.38.ebuild:
  Stable for HPPA too.

  13 Jun 2008; Raúl Porcel <armin76@gentoo.org> Archive-Tar-1.38.ebuild:
  alpha/ia64/sparc/x86 stable

  09 May 2008; Torsten Veller <tove@gentoo.org> Archive-Tar-1.32.ebuild,
  Archive-Tar-1.38.ebuild:
  #221083 - Remove >=virtual/perl-Test-Harness-2.26 from DEPEND

  19 Mar 2008; Jeroen Roovers <jer@gentoo.org> Archive-Tar-1.32.ebuild:
  Stable for HPPA too.

*Archive-Tar-1.38 (29 Feb 2008)

  29 Feb 2008; Christian Hartmann <ian@gentoo.org> +Archive-Tar-1.38.ebuild:
  Version bump

  29 Dec 2007; <welp@gentoo.org> Archive-Tar-1.32.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  10 Nov 2007; Samuli Suominen <drac@gentoo.org> Archive-Tar-1.32.ebuild:
  amd64 stable

  09 Aug 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Archive-Tar-1.32.ebuild:
  Stable on ppc.

  01 Aug 2007; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.32.ebuild:
  Stable on mips.

  22 Jul 2007; Tom Gall <tgall@gentoo.org> Archive-Tar-1.32.ebuild:
  stable on ppc64

  09 Jul 2007; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.32.ebuild:
  Marking sparc stable

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Archive-Tar-1.32.ebuild:
  alpha/ia64/x86 stable

  04 Jul 2007; Tom Gall <tgall@gentoo.org> Archive-Tar-1.31.ebuild:
  stable on ppc64

  30 Jun 2007; Joshua Kinard <kumba@gentoo.org> Archive-Tar-1.31.ebuild:
  Stable on mips.

  25 Jun 2007; Michael Cummings <mcummings@gentoo.org>
  Archive-Tar-1.31.ebuild: