@@ -1,6 +1,18 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Archive-Tar-1.32.tar.gz 39522 RMD160 698432a64b5939b40d1c0bef0cab46ddb9217051 SHA1 1e2ce5418b9bbff79836fce79f2fd00081175023 SHA256 2b154f4b1b7eba5ee8ab22fd9b768a51672ad7875a597c57e7e51432b56d9a0c
 DIST Archive-Tar-1.38.tar.gz 42452 RMD160 908cf29622038cc526bcca98a65523e4cb445b8c SHA1 f52b4928b839d0bb8f77e507a59ff46af816737e SHA256 d10008979ea02b1fd1f34c939ecc9b23a200eba9b20a405119dd6e986a6543dd
+DIST Archive-Tar-1.40.tar.gz 48243 RMD160 19650609dfe77596f7f5192ff59785e8a54b6ad7 SHA1 8161961fe2cb9b215f8fca3470dc618b302b50c8 SHA256 7d6b285b7ea5c55042eca05e2a357d6449c44c2b940ea4bacbcbf1c1e1bb0c4e
 EBUILD Archive-Tar-1.32.ebuild 639 RMD160 2f4a95f7284d08bc88fb3e1924f9c10a25821e3b SHA1 e6cb57b7a66cc515572c731ec9fca047dfa7d6fb SHA256 d6c6190ea513fe1786191bde1ff389b13ad756a7bb0f1d6a2cc7f1f667ed225c
 EBUILD Archive-Tar-1.38.ebuild 649 RMD160 5d0abbb3203bfc93f469d68148937cc05baf0a5b SHA1 76fff199dd72beee3fef744f9aa3eed6655accab SHA256 21a95311195563ea33d411e056a308d09969816c46a850cc6d722161b7a8f494
-MISC ChangeLog 11143 RMD160 0f8f08054d2166e05d33b6bb847550d74405508a SHA1 d533faa0896110b8b7ef66501b210ed481756558 SHA256 326c82af3ba548e038defebebb0f407eb50d27547861f25c1e7135390c61356d
+EBUILD Archive-Tar-1.40.ebuild 625 RMD160 b290a1f8a311baa4aab4fd5617f93f989dec5132 SHA1 c9ceabf05f8ff1eddbf8ad024fd4574e29dfc785 SHA256 fee2a8a3607723a7b3078ec573040bd65eba0f54c25fe4456e0d2539a0b3622e
+MISC ChangeLog 11277 RMD160 6c6d6bb7cd91148905ed39ecc22af0cc2676925c SHA1 9fe08b0e1b07c8178c35668d0796d6c10288fb65 SHA256 407b6c7c83c05431a11ed448fb550ada53eb3a766926df48ca616ded3f5c630b
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.9 (GNU/Linux)
+
+iEYEARECAAYFAkj8wxgACgkQV3J2n04EauyAwwCdHPyINHhtTnVqwnUVd4SqTwvE
+TwIAoLTeO5SaqDzojZj5AmpCG9eTVDBp
+=MYB7
+-----END PGP SIGNATURE-----
