@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Archive-Tar
 # Copyright 2002-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.94 2008/09/20 12:15:31 coldwind Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Archive-Tar/ChangeLog,v 1.95 2008/10/20 17:43:02 tove Exp $
+
+*Archive-Tar-1.40 (20 Oct 2008)
+
+  20 Oct 2008; Torsten Veller <tove@gentoo.org> +Archive-Tar-1.40.ebuild:
+  Version bump. Fixes #192989
 
   20 Sep 2008; Santiago M. Mola <coldwind@gentoo.org>
   Archive-Tar-1.38.ebuild:
